fix up display wrapping

--- a/doccelerator/_attachments/style/main.css
+++ b/doccelerator/_attachments/style/main.css
@@ -77,6 +77,7 @@ td {
   text-align: right;
   font-size: 80%;
   color: #656763;
+  cursor: pointer;
 }
 
 .docthing-toolbar span:hover .inline-icon {
@@ -151,6 +152,12 @@ td {
   width: 95%;
   width: -moz-available;
   height: 8em;
+}
+
+.comment-display-text {
+  word-wrap: break-word;
+  white-space: -moz-pre-wrap;
+  white-space: pre-wrap;
 }
 
 #sidebar .happybox h3 {
